test/tests/compiler/8_loops/invalid_parse/missing_for_header_clause.plx
pub fn main(none) i32 {
    loop i: i32 = 0 .. {
        ;
    }
    return 0
}
